--- a/code/Projekt/style.css
+++ b/code/Projekt/style.css
@@ -4,118 +4,149 @@ body {
 }
 
 
-a:link,
-a:visited,
-a:hover,
-a:active {
-  color: rgba(0, 0, 16, 0.8);
-  text-decoration: none;
-}
-
-a:hover,
-a:active {
-  border-bottom: 0.1em solid rgba(0, 0, 16, 0.8);
-  color: rgba(0, 0, 16, 0.8);
-  text-decoration: none;
-}
-
-span {
-  color: rgba(0, 0, 16, 0.4);
-  font-size: 70%;
-}
-
-header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: auto;
-  width: 34.6rem;
-}
-
-header h1 {
-  font-size: 2.8em;
-}
-
-.card {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: auto;
-  -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 16, 0.19), 0 0.3rem 0.3rem rgba(0, 0, 16, 0.23);
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 16, 0.19), 0 0.3rem 0.3rem rgba(0, 0, 16, 0.23);
-  background-color: rgb(255, 255, 255);
-  padding: 0.8rem;
-  width: 33rem;
-}
-
-.rating-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  padding: 0.4rem 0.8rem;
-  width: 100%;
-}
-
-.rating-text p {
-  color: rgba(0, 0, 16, 0.8);
-  font-size: 1.3rem;
-  padding: 0.3rem;
-}
-
-.rating {
-  background-color: rgba(0, 0, 16, 0.8);
-  padding: 0.4rem 0.4rem 0.1rem 0.4rem;
-  border-radius: 2.2rem;
-}
-
-svg {
-  fill: rgb(242, 242, 242);
-  height: 3.6rem;
-  width: 3.6rem;
-  margin: 0.2rem;
-}
-
-.rating-form-2 svg {
-  height: 3rem;
-  width: 3rem;
-  margin: 0.5rem;
-}
-
-#radios label {
-  position: relative;
-}
-
-input[type="radio"] {
+h1 {
+  color:rgb(50, 85, 202);
+  text-align: left;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: 500;
   position: absolute;
-  opacity: 0;
+  float: right;
+  left: 1390px;
+
 }
 
-input[type="radio"] + svg {
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
+p {
+  color:lightslategray;
+  text-align: left;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: 500;
+  position: absolute;
+  float: right;
+  left: 1390px;
+  top:50px;
+  
 }
 
-input + svg {
+label {
+  color:lightslategray;
+  text-align: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: 500;
+  position: relative;
+  
+}
+
+input {
     cursor: pointer;
   }
-  
-  input[value="1"]:hover + svg,
-  input[value="1"]:checked + svg,
-  input[value="1"]:focus + svg {
-    fill: rgb(196, 25, 25);
+
+  input[type="radio"] {
+    -webkit-appearance: none;
+    background:  rgb(58, 55, 71);
+    border-radius: 0.3em;
+    transition: background-color 300ms, border-color 300ms;
+  }
+
+  /*INPUT 1 ########################################*/
+  input[value="1"] {
+  -webkit-appearance: none;
+	width: 48px;
+  height: 48px;
+	background:  rgb(58, 55, 71);
+	border-radius: 0.3em;
+	transition: background-color 300ms, border-color 300ms;
+  -webkit-mask-image: url(superhappy.svg);
+  mask-image: url(superhappy.svg);
+  background-size: cover;
+  margin-right:20px;
+  mask-size: cover;
+  mask-size: contain;
+  -webkit-mask-size: 100%;
+  mask-size: 100%;
   }
   
-  input[class="happy"]:hover + svg,
-  input[class="happy"]:checked + svg,
-  input[class="happy"]:focus + svg {
-    fill: rgb(165, 32, 170);
+  input[value="1"]:hover,
+  input[value="1"]:checked,
+  input[value="1"]:focus {
+  -webkit-appearance: none;
+	border-radius: 0.3em;
+	transition: background-color 300ms, border-color 300ms;
+  background-color: rgb(218, 31, 31);
   }
   
-  input[class="neutral"]:hover + svg,
-  input[class="neutral"]:checked + svg,
-  input[class="neutral"]:focus + svg {
-    fill: rgb(17, 141, 190);
-  }
+  
+  /*INPUT 2 ########################################*/
+
+  input[value="2"] {
+    -webkit-appearance: none;
+    width: 48px;
+    height: 48px;
+    background:  rgb(58, 55, 71);
+    border-radius: 0.3em;
+    transition: background-color 300ms, border-color 300ms;
+    -webkit-mask-image: url(happy.svg);
+    mask-image: url(happy.svg);
+    background-size: cover;
+    margin-right:20px;
+    mask-size: cover;
+    mask-size: contain;
+    -webkit-mask-size: 100%;
+    mask-size: 100%;
+    }
+    
+    input[value="2"]:hover,
+    input[value="2"]:checked,
+    input[value="2"]:focus {
+    -webkit-appearance: none;
+    border-radius: 0.3em;
+    transition: background-color 300ms, border-color 300ms;
+    background-color: rgb(204, 34, 238);
+    }
+
+      
+  /*INPUT 3 ########################################*/
+
+  input[value="3"] {
+    -webkit-appearance: none;
+    width: 48px;
+    height: 48px;
+    background:  rgb(58, 55, 71);
+    border-radius: 0.3em;
+    transition: background-color 300ms, border-color 300ms;
+    -webkit-mask-image: url(neutral.svg);
+    mask-image: url(neutral.svg);
+    background-size: cover;
+    margin-right:20px;
+    mask-size: cover;
+    mask-size: contain;
+    -webkit-mask-size: 100%;
+    mask-size: 100%;
+    }
+    
+    input[value="3"]:hover,
+    input[value="3"]:checked,
+    input[value="3"]:focus {
+    -webkit-appearance: none;
+    border-radius: 0.3em;
+    transition: background-color 300ms, border-color 300ms;
+    background-color: rgb(25, 182, 230);
+    }
+
+
+
+  /*Play Pause Button ########################################*/
+
+
+  .playbutton {
+    display: table;
+    padding: 7px 15px 8px 15px;
+    border: none;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 12px;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: hsl(235, 47%, 14%);
+    cursor: pointer;
+    opacity: 0.9;
+    border-radius: 3px;
+}
